[gd_scene load_steps=2 format=3 uid="uid://dlflnk77rhqpf"]

[ext_resource type="Script" path="res://collectibles/collectible_generator.gd" id="1_efjdk"]

[node name="CollectibleGenerator" type="Node2D"]
script = ExtResource("1_efjdk")

[node name="NaCoins" type="Node2D" parent="."]

[node name="ClCoins" type="Node2D" parent="."]

[node name="NaClCoins" type="Node2D" parent="."]
